# artifyme-backend/docs/swagger.json
@@ -19,6 +19,11 @@
     "paths": {
         "/api/artist/paintings/": {
             "get": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Get all paintings added by the logged-in artist",
                 "produces": [
                     "application/json"
@@ -54,6 +59,11 @@
         },
         "/api/artist/paintings/add": {
             "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
                 "description": "Artist adds a painting",
                 "consumes": [
                     "application/json"
